--- a/MvcVendingMachine/Views/Machines/Index.cshtml
+++ b/MvcVendingMachine/Views/Machines/Index.cshtml
@@ -26,7 +26,7 @@
 
 
 <p>
-    Saldo anda adalah : @Model.totalNominal
+    Saldo anda adalah : @Model.totalNominal | @ViewBag.Error
 </p>
 <br /><br />
 <a asp-controller="Machines" asp-action="ListProduct" class="btn btn-primary" style="width:150px"> Daftar Menu </a>
@@ -52,7 +52,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in ViewBag.mesin)
+            @foreach (var item in ViewBag.Mesin)
             {
                 <tr>
                     <td>
