--- a/MvcVendingMachine/Views/Machines/Detail.cshtml
+++ b/MvcVendingMachine/Views/Machines/Detail.cshtml
@@ -1,11 +1,10 @@
-﻿@model MvcVendingMachine.Models.Machine
+﻿@model MvcVendingMachine.ViewModel.MachineImageViewModel
 
-@{
-    ViewData["Title"] = "Details";
-}
 
-<h1>Details</h1>
 
+<form method="post">
+    <input type="hidden" asp-for="Id" />
+    
 <div>
     <h4>Machine</h4>
     <hr />
@@ -28,9 +27,21 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Hargaproduk)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Gambar)
+        </dt>
+        <dd class = "col-sm-10">
+            @foreach( var images in Model.ImageString)
+            {
+                <img src="~/Images/@images.ImagePath" class="rounded-circle" width="70" height="70" asp-append-version="true">
+            }
+        </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Indexproduct">Back to List</a>
 </div>
+</form>
+
+
