--- a/MvcVendingMachine/Views/Shared/_Layout.cshtml
+++ b/MvcVendingMachine/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Machines" asp-action="Create">Tambah Data</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Machines" asp-action="Indexproduct">Lihat Barang</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
